# pycon-tw-2024-python-observability

./: docker-compose.yaml  k6-script-todo.js  k6-script.js  readme.md
.github/workflows/: build.yaml
app/: .gitignore  Dockerfile  README.md  basic.py  build.sh  main.py  pyproject.toml  utils.py
app/todo_app/: crud.py  database.py  models.py  schemas.py
etc/: prometheus.yml
etc/grafana/: dashboards.yml  datasource.yml
etc/grafana/dashboards/: FastAPI Observability.json
