[project]
name = "app"
version = "0.1.0"
description = "Demo application for observability"
authors = [
    { name = "blueswen", email = "blueswen.tw@gmail.com" }
]
dependencies = [
    "httpx>=0.27.2",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-asyncio==0.48b0",
    "opentelemetry-instrumentation-dbapi==0.48b0",
    "opentelemetry-instrumentation-logging==0.48b0",
    "opentelemetry-instrumentation-sqlite3==0.48b0",
    "opentelemetry-instrumentation-threading==0.48b0",
    "opentelemetry-instrumentation-urllib==0.48b0",
    "opentelemetry-instrumentation-wsgi==0.48b0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-grpc==0.48b0",
    "opentelemetry-instrumentation-httpx==0.48b0",
    "opentelemetry-instrumentation-requests==0.48b0",
    "opentelemetry-instrumentation-tortoiseorm==0.48b0",
    "opentelemetry-instrumentation-urllib3==0.48b0",
    "prometheus-client>=0.20.0",
    "sqlalchemy>=2.0.34",
    "psycopg2>=2.9.9",
    "opentelemetry-instrumentation-asgi==0.48b0",
    "opentelemetry-instrumentation-psycopg2==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "redis>=5.0.8",
    "opentelemetry-instrumentation-redis==0.48b0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.6.4",
]
